--- a/ParcAuto/Form1.resx
+++ b/ParcAuto/Form1.resx
@@ -223,6 +223,17 @@
         yGVa4V9Sq/0CD/Os6+hwEKsAAAAASUVORK5CYII=
 </value>
   </data>
+  <data name="btnPosteSimple.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAABGdBTUEAALGPC/xhBQAAACBjSFJNAAB6
+        JgAAgIQAAPoAAACA6AAAdTAAAOpgAAA6mAAAF3CculE8AAAAB3RJTUUH5ggfEzEqN0WNegAAARNJREFU
+        OE+1k0tOwzAQQLOETTkCghVlDwjRwwCH4HcTQIBUKPehH7bAIWAH5r16rKZpsoMnPcmZeMb2xKn+hZTS
+        Ll7iQ+i4H6+7YdIGPuMPNjE2wl5MX4YXJk9QPvEaj8ObiMkYV4sQdGWZ4iau41HoeAtnKI+RliHgmd2i
+        q5h8gB9YeMd9tMgXOnfREx6uUNy2q9WTCxZZw9v5U0oXkT4vcJ9j6QQHediKxznNw3QX6SsFnNTFIbYW
+        aB7B7TZ5w84j9LE00UbZsHoRk/dwG23iN+5EeoaAl0T8VBZxtfIZHZv8ijKMtAUEe+glEVdxq/ZEHRuT
+        F+y8jRZ5wrar7LaH2J5ch0n25BzLz3SGy2f+G6rqF0Q3UpuMiUWjAAAAAElFTkSuQmCC
+</value>
+  </data>
   <data name="btnNbCourriers.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAABGdBTUEAALGPC/xhBQAAACBjSFJNAAB6
