--- a/ParcAuto/Form1.resx
+++ b/ParcAuto/Form1.resx
@@ -471,6 +471,25 @@
         CwAAAABJRU5ErkJggg==
 </value>
   </data>
+  <data name="btnConsommation.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAAABGdBTUEAALGPC/xhBQAAACBjSFJNAAB6
+        JgAAgIQAAPoAAACA6AAAdTAAAOpgAAA6mAAAF3CculE8AAAAB3RJTUUH5ggfEyUiFzDSHQAAAs1JREFU
+        WEfVl02ITWEYxy8xpOzUpLHTsKAINSXlK5JZ0JSSEiks2CoLZSaNJkWKiJ2FBTJqUMrXgsY3O0okIlkQ
+        yke+Xr//+z7nnO6c995zr3s2fvWrc/7v8773ufd83HMqZeCcm4Q78SZ+wJ/4Gi/gJmyz0vJh8bX4Cevx
+        HBfblPJg0T34R58Ab1D73bgGV+Eh/IziB66zqa3DYpv9soFjOMHyAz5xboPtt+MVnzj3HbuU52BgNK7H
+        gQb9iOK4LeFhfzDErtciZW14w6fO3cdRNpRB2OuHm0M/u//mCeznGhDsd6IOg1hqcQbhnTDmrqN+0nq+
+        R9Fv01PIog0IMl0V4qBFGYSPwpjbaFFNqHkXSt1Ki1LIkgYOW5RCpktVXLIog7CZBr6GUjffohSyE2HI
+        cwvn2JDGtvrUudsWZRDmGmC7C/tx5An4DUWPlaaQdeAp/K0CGLYhjfWFyA1ZlEEYa+BhiGpy1EpzMDYT
+        j2B6mNgeRtFnUQZhrIEe1Lc5PcJrKL5gh5XXhbpFfkZglsUZhM2cA2Pwsa8O1/d4G4rC+GR8qWIYtLga
+        BhpuQFC3AJNzQZfwDBuqgnwJvlIRvMUpNlQNA7FDMBV1y91Sw/OY8Asv427cjnvxHibow+fZ0nkYjDVw
+        N0QtoT+rMxj/5gkUxBrYhmpC9+96XkT9C+7DIdR5cRZ3YfTQ5KCwqXOgHqyxHHXNj7OoGIrLbOBJWMp1
+        W1QMxbFDoLuaHi6KXIbpXyzbJ1EPIp0WFUNxrAHdyxtlhU3zsD/WNhuDCbEGduBT1DNdPfUwmp7lbOvk
+        02233aJiKC7zHHgWlnKrLSqG4jIb0K8icv+WNaE4dggm4twGnGZTPOyX1sDVEBWiu91Cm1ZqA/tRbzpF
+        vsD0kmO7nAb+Fdb4vxvQ+0HsRGtGvZiKpho4F+aUymxbvhiKp+MDTF42W0Fvy/kHzxyVyl/GhhAMvk3h
+        CwAAAABJRU5ErkJggg==
+</value>
+  </data>
   <data name="btnTransport.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAAABGdBTUEAALGPC/xhBQAAACBjSFJNAAB6
@@ -502,6 +521,52 @@
         WdAk8xWaiDTvP4zhTURxQd6pAB2kRYY3FUPz+wDoY5KtP0q8g2OCvFMBx6AF5SbojdBnVQuNqAWpnERf
         b5BA0O5UgBaYG6EJRqtcfZ6jFqM+LUo7e4MEgvbCCyhm/C+g0AK0di/oE5wUjKV/aF6izpqSg476x/QH
         ggsPV79xHImv6t9Ipf4As0jX83NgCCcAAAAASUVORK5CYII=
+</value>
+  </data>
+  <data name="VignettesUp.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAABGdBTUEAALGPC/xhBQAAACBjSFJNAAB6
+        JgAAgIQAAPoAAACA6AAAdTAAAOpgAAA6mAAAF3CculE8AAAAB3RJTUUH5gcbCCo6noUakwAAAJ1JREFU
+        OE/dkEEOgjAQRcstDFwDL0Y8BGFDWOjRTMQNN6nv05mksQJu9SWPlJn5E0r4Y2KMFV6ws9L3WHhCZ8TK
+        2vtoEPOwc7xEA5iHHzin48pooyU038MKNnjCuwpG+SUqYBG2tvrbS3TAzbBD7fMSHsP6mtCda8sU0NOV
+        8n/Sq7ik837YYUZLngrAokKLVzwMO8xqyQ3PVvpdQngBu640bEHI9b8AAAAASUVORK5CYII=
+</value>
+  </data>
+  <data name="Vignettesdown.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAABGdBTUEAALGPC/xhBQAAACBjSFJNAAB6
+        JgAAgIQAAPoAAACA6AAAdTAAAOpgAAA6mAAAF3CculE8AAAAB3RJTUUH5gcbCCkyu3PBYgAAAJ9JREFU
+        OE/dkN0JwkAQhM9CFOzCxrQAQfMixAKClamQSs5vdm/hFJILvukHA3c7M5uf9AfknHfohjZl1ERZNKir
+        y4jEEzWXKIMeKsCowdHPxuwSeSjKogvj5HdDb7Q1o4LZGt0VKPTFchhMLuE8Xw4wzu4btgQtKwcELp4z
+        9E/qb76iVYlOQ6iz+Ds9apcDwvWSZU/+hNIeHb4q/wopvQDfGBzKWzg4OgAAAABJRU5ErkJggg==
+</value>
+  </data>
+  <data name="btnVignettes.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAAABGdBTUEAALGPC/xhBQAAACBjSFJNAAB6
+        JgAAgIQAAPoAAACA6AAAdTAAAOpgAAA6mAAAF3CculE8AAAAB3RJTUUH5gcMEwUTE5aZJQAAAe9JREFU
+        WEftl71OYzEQhVOxPVQ00CDxEiBYyjwGzwAFokEroNxieRugAtFTU9ACEhT8FKAtwnesmTAOTnRtIi3F
+        ftLRnJnM2M7FQrm9b8FgMFhEp+gNTROtd4IWbKsyNGjzHTRjpWqY3UN/0ZGVVJtBu+jYSmVo0EmbNxfM
+        6wC/0SXasbLqP9CbpWVoGJiVP0Qv6MBKqq2jLfPaaBTVXPPoGm2mYcAP1y8SG7DPqI+eLF9Bd2gjNYyB
+        z/Un/GN+Gd2gvuVVBzhAOsQ++rQ5ftwTWEJXKfvg0Wa6H8ChtIpu0cRvPglf1+NYRhtItbm++U+U3Qli
+        8QmkwRH0QYxjiQ3Y4eaWZ3eiBmaaDrCN1ixVPrwTVsqgridU+w9M/R/rqWK2Glts1tJO0D+HXi398gH8
+        MV/Id+A8ziViIi+iL5GawX2sTaLYnyWV+GxcY7TmUZRqnxpE9CVSM7iPtUkU+7OkEp8lnMt34CzOJWIi
+        L6IvkZoh+hqyudZFhM8SHuThvmNePoC8iL5Eagb3rTGRJZX4LOFeXrFjXj6AvIi+RGqG6GvI5loXET5L
+        +H8HpnMHammdzeZaFxE+S5jOHajFZ1tjAt/8YuILEb50B/T+pleo6kMwo8PPWdoJ9aPsF5FeTo9R7W+7
+        Vl7RL9v+X9LrvQMv0/WNqXwkiQAAAABJRU5ErkJggg==
+</value>
+  </data>
+  <data name="Quitter.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAAABGdBTUEAALGPC/xhBQAAACBjSFJNAAB6
+        JgAAgIQAAPoAAACA6AAAdTAAAOpgAAA6mAAAF3CculE8AAAAB3RJTUUH5ggfEysJJQ8G0wAAAY5JREFU
+        WEftlz1Ow0AQRp2OC0APUhAS4iLQECQoqOEayT0SoAVRUcEtQgcFIqJBtPw1QcDyZj0Wu9hOiow3DU96
+        ij0b7TfJbmI7q8I518E3tOIDH/AINzSmHt40wKb4wh62NK4Mg8t4jOdGXuAdhvQ0Lh2E7mGxtJ84fTms
+        IfTAx+cMtJwOQlt47+OdG2k5LQTLnhDGWkoLwbIxPVpKC7mTG6DeRvkZdrRkCvPWN0BtDZ/8qHPPWjaF
+        easb4DwMF051yBTmLTfA8So++mrOJS7osCnMGzfAa7Jwgbl/G8AtfPVnOUPcx90Z3cElzYygHjXwnR82
+        wq1mRlBP1sCNZkZQjxrYxHAJrtFqCRY1M4L61E14hWk2YQHHyZpg3nIDAud//4jOdMgU5q1uQKAWNvGi
+        ZVOYt74BgbpcjOTGNP3FKAXk/jcwv1syQud7U0roYZ7t6Wu5eQiTTy7h75IM8mCyrsMxDKzgCcpmsVDW
+        vPjaC7oaV4bBJh9O5ZN3ceLD6TaGV8hZGeMI+xh87Vn2AyzNocICV5s5AAAAAElFTkSuQmCC
 </value>
   </data>
   <data name="repup.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
@@ -633,52 +698,6 @@
         zX1LsN2HUdpcclIodBN7remgHVwGPRvmYDBZw/RZejIo1Il69g+2kGJaSV9FnYXo9RdaU3ZYejIopI9a
         oW8IvVdaUN+XQi+oK6i3pu6OW9iK42x4cig2CTWpwmjRegpnW1p54UBrUCskqQlXwjdkJvMHXbX4GQC+
         fG8AAAAASUVORK5CYII=
-</value>
-  </data>
-  <data name="VignettesUp.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
-    <value>
-        iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAABGdBTUEAALGPC/xhBQAAACBjSFJNAAB6
-        JgAAgIQAAPoAAACA6AAAdTAAAOpgAAA6mAAAF3CculE8AAAAB3RJTUUH5gcbCCo6noUakwAAAJ1JREFU
-        OE/dkEEOgjAQRcstDFwDL0Y8BGFDWOjRTMQNN6nv05mksQJu9SWPlJn5E0r4Y2KMFV6ws9L3WHhCZ8TK
-        2vtoEPOwc7xEA5iHHzin48pooyU038MKNnjCuwpG+SUqYBG2tvrbS3TAzbBD7fMSHsP6mtCda8sU0NOV
-        8n/Sq7ik837YYUZLngrAokKLVzwMO8xqyQ3PVvpdQngBu640bEHI9b8AAAAASUVORK5CYII=
-</value>
-  </data>
-  <data name="Vignettesdown.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
-    <value>
-        iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAABGdBTUEAALGPC/xhBQAAACBjSFJNAAB6
-        JgAAgIQAAPoAAACA6AAAdTAAAOpgAAA6mAAAF3CculE8AAAAB3RJTUUH5gcbCCkyu3PBYgAAAJ9JREFU
-        OE/dkN0JwkAQhM9CFOzCxrQAQfMixAKClamQSs5vdm/hFJILvukHA3c7M5uf9AfknHfohjZl1ERZNKir
-        y4jEEzWXKIMeKsCowdHPxuwSeSjKogvj5HdDb7Q1o4LZGt0VKPTFchhMLuE8Xw4wzu4btgQtKwcELp4z
-        9E/qb76iVYlOQ6iz+Ds9apcDwvWSZU/+hNIeHb4q/wopvQDfGBzKWzg4OgAAAABJRU5ErkJggg==
-</value>
-  </data>
-  <data name="btnVignettes.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
-    <value>
-        iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAAABGdBTUEAALGPC/xhBQAAACBjSFJNAAB6
-        JgAAgIQAAPoAAACA6AAAdTAAAOpgAAA6mAAAF3CculE8AAAAB3RJTUUH5gcMEwUTE5aZJQAAAe9JREFU
-        WEftl71OYzEQhVOxPVQ00CDxEiBYyjwGzwAFokEroNxieRugAtFTU9ACEhT8FKAtwnesmTAOTnRtIi3F
-        ftLRnJnM2M7FQrm9b8FgMFhEp+gNTROtd4IWbKsyNGjzHTRjpWqY3UN/0ZGVVJtBu+jYSmVo0EmbNxfM
-        6wC/0SXasbLqP9CbpWVoGJiVP0Qv6MBKqq2jLfPaaBTVXPPoGm2mYcAP1y8SG7DPqI+eLF9Bd2gjNYyB
-        z/Un/GN+Gd2gvuVVBzhAOsQ++rQ5ftwTWEJXKfvg0Wa6H8ChtIpu0cRvPglf1+NYRhtItbm++U+U3Qli
-        8QmkwRH0QYxjiQ3Y4eaWZ3eiBmaaDrCN1ixVPrwTVsqgridU+w9M/R/rqWK2Glts1tJO0D+HXi398gH8
-        MV/Id+A8ziViIi+iL5GawX2sTaLYnyWV+GxcY7TmUZRqnxpE9CVSM7iPtUkU+7OkEp8lnMt34CzOJWIi
-        L6IvkZoh+hqyudZFhM8SHuThvmNePoC8iL5Eagb3rTGRJZX4LOFeXrFjXj6AvIi+RGqG6GvI5loXET5L
-        +H8HpnMHammdzeZaFxE+S5jOHajFZ1tjAt/8YuILEb50B/T+pleo6kMwo8PPWdoJ9aPsF5FeTo9R7W+7
-        Vl7RL9v+X9LrvQMv0/WNqXwkiQAAAABJRU5ErkJggg==
-</value>
-  </data>
-  <data name="Quitter.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
-    <value>
-        iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAAABGdBTUEAALGPC/xhBQAAACBjSFJNAAB6
-        JgAAgIQAAPoAAACA6AAAdTAAAOpgAAA6mAAAF3CculE8AAAAB3RJTUUH5ggfEysJJQ8G0wAAAY5JREFU
-        WEftlz1Ow0AQRp2OC0APUhAS4iLQECQoqOEayT0SoAVRUcEtQgcFIqJBtPw1QcDyZj0Wu9hOiow3DU96
-        ij0b7TfJbmI7q8I518E3tOIDH/AINzSmHt40wKb4wh62NK4Mg8t4jOdGXuAdhvQ0Lh2E7mGxtJ84fTms
-        IfTAx+cMtJwOQlt47+OdG2k5LQTLnhDGWkoLwbIxPVpKC7mTG6DeRvkZdrRkCvPWN0BtDZ/8qHPPWjaF
-        easb4DwMF051yBTmLTfA8So++mrOJS7osCnMGzfAa7Jwgbl/G8AtfPVnOUPcx90Z3cElzYygHjXwnR82
-        wq1mRlBP1sCNZkZQjxrYxHAJrtFqCRY1M4L61E14hWk2YQHHyZpg3nIDAud//4jOdMgU5q1uQKAWNvGi
-        ZVOYt74BgbpcjOTGNP3FKAXk/jcwv1syQud7U0roYZ7t6Wu5eQiTTy7h75IM8mCyrsMxDKzgCcpmsVDW
-        vPjaC7oaV4bBJh9O5ZN3ceLD6TaGV8hZGeMI+xh87Vn2AyzNocICV5s5AAAAAElFTkSuQmCC
 </value>
   </data>
   <data name="pictureBox1.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
